Bug 1825274: Adding nowrap to subscribe/unsubscribe buttons
So the stay on one line when in small screen mode

behatnotneeded

(cherry picked from commit 1cdec3254b444c74f46fc2e62f220ed6f76f5f16)

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -859,3 +859,7 @@ div.form-group .form-control-label {
 a.online-users {
     text-align: left;
 }
+
+#forums-list .button {
+    white-space: nowrap;
+}
